change logger to slog based
