# app/services/bank-api/routes/authgrp/send-email.go
@@ -24,18 +24,19 @@ type SendEmailResponse struct {
 }
 
 // SendEmail godoc
-// @Summary Send an email to user with given subject
-// @Description Send an email to user with given subject, currently subject=welcome, subject=verify and subject=report are implemented. User needs to have a non-null email to be verified, and have a verified email to receive welcome.
-// @Tags Authentication
-// @Accept json
-// @Produce json
-// @Security Bearer
-// @Param request body SendEmailRequest true "Email subject"
-// @Success 201
-// @Failure 400
-// @Failure 404
-// @Failure 409
-// @Router /send-email [post]
+//
+//	@Summary		Send an email to user with given subject
+//	@Description	Send an email to user with given subject, currently subject=welcome, subject=verify and subject=report are implemented. User needs to have a non-null email to be verified, and have a verified email to receive emails of other subjects.
+//	@Tags			Authentication
+//	@Accept			json
+//	@Produce		json
+//	@Security		Bearer
+//	@Param			request	body	SendEmailRequest	true	"Email subject"
+//	@Success		201
+//	@Failure		400
+//	@Failure		404
+//	@Failure		409
+//	@Router			/send-email [post]
 func (h *Handler) SendEmail(ctx context.Context, w http.ResponseWriter, r *http.Request) error {
 	var req SendEmailRequest
 	var taskId string
@@ -84,6 +85,9 @@ func (h *Handler) SendEmail(ctx context.Context, w http.ResponseWriter, r *http.
 }
 
 func (h *Handler) sendReportEmail(ctx context.Context, user db_generated.User) (string, error) {
+	if !user.IsEmailVerified {
+		return "", web.NewError(errors.New("user's email is not verified"), http.StatusConflict)
+	}
 	data := email.SubjectReportData{Username: user.Username}
 	payload := email.SenderPayload{
 		To:      user.Email.String,
@@ -124,6 +128,9 @@ func (h *Handler) sendVerifyEmail(
 	ctx context.Context,
 	u db_generated.User,
 ) (string, error) {
+	if u.IsEmailVerified {
+		return "", web.NewError(errors.New("user's email is already verified"), http.StatusConflict)
+	}
 	record, err := h.user.CreateVerifyEmail(ctx, u, user.NewVerifyEmail{Email: u.Email.String})
 	if err != nil {
 		return "", err
